--- a/css/style.css
+++ b/css/style.css
@@ -1,135 +1,303 @@
 
- body {
-    margin: 0px;
-    padding: 0px;
-  
-   font-weight: bold;
+body {
+  margin: 0px;
+  padding: 0px;
+
+
+  background: hsla(173, 58%, 43%, 1);
+  background: linear-gradient(90deg, rgb(223, 230, 229) 0%, hsla(188, 69%, 27%, 1) 100%);
+  background: -moz-linear-gradient(90deg, rgb(133, 239, 222) 0%, hsla(188, 69%, 27%, 1) 100%);
+  background: -webkit-linear-gradient(90deg, rgb(123, 139, 137) 0%, hsla(188, 69%, 27%, 1) 100%);
+
+
 }
 
 
 
 
 img, embed, object, video, picture {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 p, h1, h2, h3, h4, h5 {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 
 
 a {
-    text-decoration: none;
-    transition: all .5s ease-in-out;
+  text-decoration: none;
+  transition: all .5s ease-in-out;
 }
 
 input, textarea {
-    display: block;
-    margin: 0px;
-    padding: 0px;
+  display: block;
+  margin: 0px;
+  padding: 0px;
 }
 
 section h2, section h3, section p {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 
 .spacer {
-    margin-top: 60px;
+  margin-top: 60px;
 }
 
 .txt-spacer {
-    margin-top: 30px;
-}
-
- /* ---End of General Styles--- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- .offerbox{
-  background-color: rgb(206, 211, 63);
-  color: rgb(255, 255, 255);
-  border-radius: 5px;
-  padding: 20px;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  height: 450px;
-
-}
-  
-
-
-/*FOR SALE BUTTON :BUY NOW (sale-page)*/
-
-.salebutton{
-
-  background-color: brown;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  padding: 12px 28px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  transition-duration: 0.4s;
-
-  transition: transform 0.3s ease;
-
-  margin-top: 8px;
-margin-bottom: 8px;
-margin-left: 50px;
-}
-
-.salebutton:hover {
-  background-color: #1cbcbf;
-  color: white;
-}
-
-.salebutton:hover {
-  transform: scale(1.1);
+  margin-top: 30px;
 }
 
 
 
-/*FOR SALE ITEM IMAGE*/
-.saleitemimage{
-  border-radius: 2px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
-  border-radius: 2%;
+
+.item-headline {
+font-size: 24px;
+font-weight: bold;
+color: #333; 
+text-align: center; 
+text-transform: uppercase; 
+}
+
+
+.item-headline:hover {
+color: #ffffff; 
+transition: color 0.3s;
+}
+
+
+ul.bullet-list-v1 li {
+color: white;
+}
+ul.bullet-list-v2 li {
+color: white;
+}
+ul.bullet-list-v3 li {
+color: white;
+}
+
+
+ul.bullet-list-v1 li:nth-last-child(-n+3) {
+text-decoration: line-through;
+}
+
+
+ul.bullet-list-v2 li:nth-last-child(-n+1) {
+text-decoration: line-through;
+}
+
+
+a.buy-button {
+display: inline-block;
+padding: 10px 20px; 
+border: 2px solid #3498db; 
+border-radius: 25px; 
+background-color: #3498db; 
+color: #fff; 
+text-decoration: none; 
+font-weight: bold; 
+transition: background-color 0.3s, color 0.3s; 
+}
+
+a.buy-button:hover {
+background-color: #207ac1; 
+border-color: #207ac1; /
+}
+
+
+
+.offerbox{
+background-color: rgb(206, 211, 63);
+color: rgb(255, 255, 255);
+border-radius: 5px;
+padding: 20px;
+text-align: center;
+margin-top: 10px;
+margin-bottom: 10px;
+height: 450px;
+
+}
+
+
+.xraybox{
+background-color: rgb(206, 211, 63);
+color: rgb(255, 255, 255);
+border-radius: 5px;
+padding: 20px;
+text-align: center;
+margin-top: 10px;
+margin-bottom: 10px;
+height: 450px;
+}
+
+.headerbox{
+background-color: rgb(57, 181, 63);
+color: rgb(255, 255, 255);
+border-radius: 5px;
+padding: 20px;
+text-align: center;
+margin-top: 0px;
+margin-bottom: 0px;
+height: 100px;
 
 }
 
 /*footer*/
 .text-center-foot{
-  text-align: center;
-  background-color: #333333af;
+text-align: center;
+background-color: #333333af;
 }
 
 
 
-.contact{
-  text-align: center;
+
+.formbox{
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
+
+
+.container{
+width: 85%;
+
+background: hsla(173, 58%, 43%, 1);  
+background: linear-gradient(90deg, rgb(223, 230, 229) 0%, hsla(188, 69%, 27%, 1) 100%);
+background: -moz-linear-gradient(90deg, rgb(215, 233, 230) 0%, hsla(188, 69%, 27%, 1) 100%);
+
+border-radius: 20px;
+padding: 20px 60px 30px 40px;
+box-shadow: 0 5px 10px rgba(17, 11, 11, 0.2);
+}
+.container .content{
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+.container .content .left-side{
+width: 25%;
+height: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin-top: 15px;
+position: relative;
+}
+.content .left-side::before{
+position: absolute;
+height: 70%;
+width: 2px;
+right: 15px;
+top: 50%;
+transform: translateY(-50%);
+}
+.content .left-side .details{
+margin: 14px;
+text-align: center;
+}
+.content .left-side .details i{
+font-size: 30px;
+color: #207293;
+margin-bottom: 10px;
+}
+.content .left-side .details .topic{
+font-size: 18px;
+font-weight: 500;
+}
+.content .left-side .details .text-one
+{
+font-size: 14px;
+color: #000000;
+}
+.container .content .right-side{
+width: 75%;
+margin-left: 75px;
+}
+.content .right-side .topic-text{
+font-size: 23px;
+font-weight: 600;
+color: #000000;
+}
+.right-side .input-box{
+height: 50px;
+width: 100%;
+margin: 12px 0;
+}
+.right-side .input-box input,
+.right-side .input-box textarea{
+height: 100%;
+width: 100%;
+border: none;
+outline: none;
+font-size: 16px;
+
+background: rgb(241, 242, 242);
+
+border-radius: 12px;
+padding: 0 15px;
+resize: none;
+}
+.right-side .message-box{
+min-height: 110px;
+}
+.right-side .input-box textarea{
+padding-top: 6px;
+}
+.right-side .button{
+display: inline-block;
+margin-top: 12px;
+}
+.right-side .button input[type="button"]{
+color: #ffffff;
+font-size: 18px;
+outline: none;
+border: none;
+padding: 8px 16px;
+border-radius: 6px;
+background: #207293;
+cursor: pointer;
+transition: all 0.3s ease;
+}
+.button input[type="button"]:hover{
+background: #29b5bc;
+}
+
+@media (max-width: 950px) {
+.container{
+  width: 90%;
+  padding: 30px 40px 40px 35px ;
+}
+.container .content .right-side{
+ width: 75%;
+ margin-left: 55px;
+}
+}
+@media (max-width: 820px) {
+.container{
+  margin: 40px 0;
+  height: 100%;
+}
+.container .content{
+  flex-direction: column-reverse;
+}
+.container .content .left-side{
+ width: 100%;
+ flex-direction: row;
+ margin-top: 40px;
+ justify-content: center;
+ flex-wrap: wrap;
+}
+.container .content .left-side::before{
+ display: none;
+}
+.container .content .right-side{
+ width: 100%;
+ margin-left: 0;
+}
+}
 
 
 
