--- a/css/style.css
+++ b/css/style.css
@@ -1,309 +1,526 @@
-
 body {
   margin: 0px;
   padding: 0px;
-
-
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
   background: hsla(173, 58%, 43%, 1);
   background: linear-gradient(90deg, rgb(223, 230, 229) 0%, hsla(188, 69%, 27%, 1) 100%);
   background: -moz-linear-gradient(90deg, rgb(133, 239, 222) 0%, hsla(188, 69%, 27%, 1) 100%);
   background: -webkit-linear-gradient(90deg, rgb(123, 139, 137) 0%, hsla(188, 69%, 27%, 1) 100%);
-
-
 }
-
-
-
-
 img, embed, object, video, picture {
   max-width: 100%;
 }
-
 p, h1, h2, h3, h4, h5 {
   margin: 0px;
   padding: 0px;
 }
-
-
-
 a {
   text-decoration: none;
   transition: all .5s ease-in-out;
 }
-
 input, textarea {
   display: block;
   margin: 0px;
   padding: 0px;
 }
-
 section h2, section h3, section p {
   padding-left: 15px;
 }
-
 .spacer {
   margin-top: 60px;
 }
-
 .txt-spacer {
   margin-top: 30px;
 }
-
-
-
-
 .item-headline {
-font-size: 24px;
-font-weight: bold;
-color: #333; 
-text-align: center; 
-text-transform: uppercase; 
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+  text-transform: uppercase;
 }
-
-
 .item-headline:hover {
-color: #ffffff; 
-transition: color 0.3s;
+  color: #ffffff;
+  transition: color 0.3s;
 }
-
-
 ul.bullet-list-v1 li {
-color: white;
+  color: white;
 }
 ul.bullet-list-v2 li {
-color: white;
+  color: white;
 }
 ul.bullet-list-v3 li {
-color: white;
+  color: white;
 }
-
-
 ul.bullet-list-v1 li:nth-last-child(-n+3) {
-text-decoration: line-through;
+  text-decoration: line-through;
 }
-
-
 ul.bullet-list-v2 li:nth-last-child(-n+1) {
-text-decoration: line-through;
+  text-decoration: line-through;
 }
-
-
 a.buy-button {
-display: inline-block;
-padding: 10px 20px; 
-border: 2px solid #3498db; 
-border-radius: 25px; 
-background-color: #3498db; 
-color: #fff; 
-text-decoration: none; 
-font-weight: bold; 
-transition: background-color 0.3s, color 0.3s; 
+  display: inline-block;
+  padding: 10px 20px;
+  border: 2px solid #3498db;
+  border-radius: 25px;
+  background-color: #3498db;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s, color 0.3s;
 }
-
 a.buy-button:hover {
-background-color: #207ac1; 
-border-color: #207ac1; /
+  background-color: #207ac1;
+  border-color: #207ac1;
+  / 
 }
-
-
-
 .offerbox{
-background-color: rgb(206, 211, 63);
-color: rgb(255, 255, 255);
-border-radius: 5px;
-padding: 20px;
-text-align: center;
-margin-top: 10px;
-margin-bottom: 10px;
-height: 450px;
-
+  background-color: rgb(206, 211, 63);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 450px;
 }
-
-
 .xraybox{
-background-color: rgb(206, 211, 63);
-color: rgb(255, 255, 255);
-border-radius: 5px;
-padding: 20px;
-text-align: center;
-margin-top: 10px;
-margin-bottom: 10px;
-height: 450px;
+  background-color: rgb(206, 211, 63);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 450px;
 }
-
 .headerbox{
-background-color: rgb(57, 181, 63);
-color: rgb(255, 255, 255);
-border-radius: 5px;
-padding: 20px;
-text-align: center;
-margin-top: 0px;
-margin-bottom: 0px;
-height: 100px;
-
+  background-color: rgb(57, 181, 63);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: 100px;
 }
 
-/*footer*/
 .text-center-foot{
-text-align: center;
-background-color: #333333af;
+  text-align: center;
+  background-color: #333333af;
 }
-
-
-
-
 .formbox{
-display: flex;
-align-items: center;
-justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-
-
 .container{
-width: 85%;
-
-background: hsla(173, 58%, 43%, 1);  
-background: linear-gradient(90deg, rgb(223, 230, 229) 0%, hsla(188, 69%, 27%, 1) 100%);
-background: -moz-linear-gradient(90deg, rgb(215, 233, 230) 0%, hsla(188, 69%, 27%, 1) 100%);
-
-border-radius: 20px;
-padding: 20px 60px 30px 40px;
-box-shadow: 0 5px 10px rgba(17, 11, 11, 0.2);
+  width: 85%;
+  background: hsla(173, 58%, 43%, 1);
+  background: linear-gradient(90deg, rgb(223, 230, 229) 0%, hsla(188, 69%, 27%, 1) 100%);
+  background: -moz-linear-gradient(90deg, rgb(215, 233, 230) 0%, hsla(188, 69%, 27%, 1) 100%);
+  border-radius: 20px;
+  padding: 20px 60px 30px 40px;
+  box-shadow: 0 5px 10px rgba(17, 11, 11, 0.2);
 }
 .container .content{
-display: flex;
-align-items: center;
-justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .container .content .left-side{
-width: 25%;
-height: 100%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-margin-top: 15px;
-position: relative;
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  position: relative;
 }
 .content .left-side::before{
-position: absolute;
-height: 70%;
-width: 2px;
-right: 15px;
-top: 50%;
-transform: translateY(-50%);
+  position: absolute;
+  height: 70%;
+  width: 2px;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .content .left-side .details{
-margin: 14px;
-text-align: center;
+  margin: 14px;
+  text-align: center;
 }
 .content .left-side .details i{
-font-size: 30px;
-color: #207293;
-margin-bottom: 10px;
+  font-size: 30px;
+  color: #207293;
+  margin-bottom: 10px;
 }
 .content .left-side .details .topic{
-font-size: 18px;
-font-weight: 500;
+  font-size: 18px;
+  font-weight: 500;
 }
-.content .left-side .details .text-one
-{
-font-size: 14px;
-color: #000000;
+.content .left-side .details .text-one {
+  font-size: 14px;
+  color: #000000;
 }
 .container .content .right-side{
-width: 75%;
-margin-left: 75px;
+  width: 75%;
+  margin-left: 75px;
 }
 .content .right-side .topic-text{
-font-size: 23px;
-font-weight: 600;
-color: #000000;
+  font-size: 23px;
+  font-weight: 600;
+  color: #000000;
 }
 .right-side .input-box{
-height: 50px;
-width: 100%;
-margin: 12px 0;
+  height: 50px;
+  width: 100%;
+  margin: 12px 0;
 }
-.right-side .input-box input,
-.right-side .input-box textarea{
-height: 100%;
-width: 100%;
-border: none;
-outline: none;
-font-size: 16px;
-
-background: rgb(241, 242, 242);
-
-border-radius: 12px;
-padding: 0 15px;
-resize: none;
+.right-side .input-box input, .right-side .input-box textarea{
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: rgb(241, 242, 242);
+  border-radius: 12px;
+  padding: 0 15px;
+  resize: none;
 }
 .right-side .message-box{
-min-height: 110px;
+  min-height: 110px;
 }
 .right-side .input-box textarea{
-padding-top: 6px;
+  padding-top: 6px;
 }
 .right-side .button{
-display: inline-block;
-margin-top: 12px;
+  display: inline-block;
+  margin-top: 12px;
 }
 .right-side .button input[type="button"]{
-color: #ffffff;
-font-size: 18px;
-outline: none;
-border: none;
-padding: 8px 16px;
-border-radius: 6px;
-background: #207293;
-cursor: pointer;
-transition: all 0.3s ease;
+  color: #ffffff;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #207293;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 .button input[type="button"]:hover{
-background: #29b5bc;
+  background: #29b5bc;
 }
-
 @media (max-width: 950px) {
-.container{
-  width: 90%;
-  padding: 30px 40px 40px 35px ;
-}
-.container .content .right-side{
- width: 75%;
- margin-left: 55px;
-}
+  .container{
+      width: 90%;
+      padding: 30px 40px 40px 35px ;
+ }
+  .container .content .right-side{
+      width: 75%;
+      margin-left: 55px;
+ }
 }
 @media (max-width: 820px) {
-.container{
-  margin: 40px 0;
-  height: 100%;
+  .container{
+      margin: 40px 0;
+      height: 100%;
+ }
+  .container .content{
+      flex-direction: column-reverse;
+ }
+  .container .content .left-side{
+      width: 100%;
+      flex-direction: row;
+      margin-top: 40px;
+      justify-content: center;
+      flex-wrap: wrap;
+ }
+  .container .content .left-side::before{
+      display: none;
+ }
+  .container .content .right-side{
+      width: 100%;
+      margin-left: 0;
+ }
 }
-.container .content{
-  flex-direction: column-reverse;
+.col-span-4 h5.offer-title {
+  font-size: 50px;
+  color: #ffffff;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
-.container .content .left-side{
- width: 100%;
- flex-direction: row;
- margin-top: 40px;
- justify-content: center;
- flex-wrap: wrap;
+.styled-hr {
+  border: 0;
+  height: 2px;
+  background-color: #ffffff;
+  margin: 20px 0;
 }
-.container .content .left-side::before{
- display: none;
+.salebutton{
+  background-color: brown;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 12px 28px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  transition-duration: 0.4s;
+  transition: transform 0.3s ease;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 50px;
 }
-.container .content .right-side{
- width: 100%;
- margin-left: 0;
+.salebutton:hover {
+  background-color: #1cbcbf;
+  color: white;
 }
+.salebutton:hover {
+  transform: scale(1.1);
+}
+.productbox {
+text-align: center;
+overflow: hidden;
+}
+
+.product-text {
+  font-size: 145px; 
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
+  background-size: 200% 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: gradientAnimation 4s linear infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+      background-position: 100%; 
+  }
+  100% {
+      background-position: -100%; 
+  }
+}
+
+
+/* For Xray
+#outerShell {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  #mobile-tablet-view {
+    display: none;
+  }
+  #outerShell {
+    display: block;
+    max-width: 1200px;
+    border: solid 1px #666;
+  }
+  #imageCon {
+    position: relative;
+    max-width: 1200px;
+    height: 100vh;
+  }
+  .slideImage {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100vh;
+  }
+  .image-right {
+    background: url(../images/o2.png) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+  }
+  .image-left {
+    background: url(../images/orgxray-earbuds.png) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 50%;
+    background-attachment: fixed;
+  }
+  .image-drag {
+    background-color: #666;
+    left: 50%;
+    width: 10px;
+    cursor: pointer;
+  }
+} */ 
+.round-image {
+  border-radius: 2%;
+  filter: brightness(0.6); /* Darken the initial image */
+  transition: all 0.3s ease;
+}
+
+.round-image:hover {
+  filter: brightness(1); 
+}
+
+.arrow {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    position: relative;
+    margin-left: 20px; 
+    border-radius: 50%; 
+    background-color: #ff0000;
+}
+
+.left-arrow::before,
+.right-arrow::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-radius: 50%; 
+}
+
+.left-arrow::before {
+    border-width: 5px 8px 5px 0;
+    border-color: transparent #fff transparent transparent;
+}
+
+.right-arrow::before {
+    border-width: 5px 0 5px 8px;
+    border-color: transparent transparent transparent #fff;
 }
 
 
 
 
+.footer {
+  position: relative;
+  top: 0%;
+  bottom: 0;
+  left: 2%;
+  transform: none;
+  max-width: 1280px;
+  width: 95%;
+  background: #10182F;
+  border-radius: 6px;
+}
 
+.footer .footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 3.5rem;
+  padding: 60px;
+}
 
+.footer-row .footer-col h4 {
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
 
+.footer-col .links {
+  margin-top: 20px;
+}
 
+.footer-col .links li {
+  list-style: none;
+  margin-bottom: 10px;
+}
 
+.footer-col .links li a {
+  text-decoration: none;
+  color: #bfbfbf;
+}
+
+.footer-col .links li a:hover {
+  color: #fff;
+}
+
+.footer-col p {
+  margin: 20px 0;
+  color: #bfbfbf;
+  max-width: 300px;
+}
+
+.footer-col form {
+  display: flex;
+  gap: 5px;
+}
+
+.footer-col input {
+  height: 40px;
+  border-radius: 6px;
+  background: none;
+  width: 100%;
+  outline: none;
+  border: 1px solid #7489C6 ;
+  caret-color: #fff;
+  color: #fff;
+  padding-left: 10px;
+}
+
+.footer-col input::placeholder {
+  color: #ccc;
+}
+
+ .footer-col form button {
+  background: #fff;
+  outline: none;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: 0.2s ease;
+}
+
+.footer-col form button:hover {
+  background: #cecccc;
+}
+
+.footer-col .icons {
+  display: flex;
+  margin-top: 30px;
+  gap: 30px;
+  cursor: pointer;
+}
+
+.footer-col .icons i {
+  color: #afb6c7;
+}
+
+.footer-col .icons i:hover  {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    transform: none;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .footer .footer-row {
+    padding: 20px;
+    gap: 1rem;
+  }
+
+  .footer-col form {
+    display: block;
+  }
+
+  .footer-col form :where(input, button) {
+    width: 100%;
+  }
+
+  .footer-col form button {
+    margin: 10px 0 0 0;
+  }
+}
