Fianl sass changes

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,5 +1,5 @@
 //Mixins
-
+/* 
 @mixin rotated($radius) {
       -webkit-transform: rotate($radius);
       -ms-transform: rotate($radius);
@@ -49,3 +49,4 @@
           url('#{$file-path}.woff2') format('woff2')
       }
   }
+  */
