--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -1,3 +1,4 @@
+/*
 :not(:defined) > * {
   display: none;
 }
@@ -167,3 +168,4 @@ model-viewer[ar-status="session-started"] > #ar-prompt {
 model-viewer > #ar-prompt > img {
   animation: circle 4s linear infinite;
 }
+*/
